- Added link to life|papers website

--- a/core/pages/help.html
+++ b/core/pages/help.html
@@ -27,6 +27,9 @@
         <a href="#loading">
             <h1>Loading/Importing</h1>
         </a>
+        <a href="#website">
+            <h1>Website</h1>
+        </a>
         <a href="#about">
             <h1>About</h1>
         </a>
@@ -69,6 +72,9 @@
             match you will be notified.<br />
             <a href="#top"><img class="info-img-s" src="../img/s9.jpg" /></a><br />
         </p>
+    </div>
+    <div id="website" class="div-hinfo">
+        <h1>Website: <a href="https://www.papers.life">www.papers.life</a></h1>
     </div>
     <div id="about" class="div-hinfo">
         <h1>About</h1>
